fix: CI infrastructure - add Utf16Convert.cpp to CMake, fix nproc, register driver
- Add Utf16Convert.cpp to CMakeLists.txt (fixes Windows CMake linker errors)
- Fix run.ps1 nproc handling on Linux (was passing empty -j arg)
- test.yml: register ODBC driver on Windows before testing
- test.yml: separate Build and Test steps for proper driver registration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ set(ODBCJDBC_SOURCES
     OdbcError.cpp
     OdbcObject.cpp
     OdbcStatement.cpp
+    Utf16Convert.cpp
 )
 
 # Add Windows-specific transaction support files if ATL is available
@@ -114,6 +115,7 @@ set(ODBCJDBC_HEADERS
     SetupAttributes.h
     TemplateConvert.h
     TransactionResourceAsync.h
+    Utf16Convert.h
     WriteBuildNo.h
     resource.h
 )
