--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -153,6 +153,7 @@ if(WIN32)
 else()
     target_link_libraries(OdbcFb PRIVATE 
         ${ODBC_LIBRARIES}
+        odbcinst
         dl
         pthread
     )
