--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -121,7 +121,7 @@ jobs:
     - name: Install Dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y unixodbc unixodbc-dev cmake g++
+        sudo apt-get install -y unixodbc unixodbc-dev odbcinst cmake g++
         # PSFirebird needs to 'apt-get download' libncurses5/libtinfo5 packages.
         # These don't exist in Ubuntu 24.04+ repos, so add Ubuntu 22.04 (jammy) as a fallback source.
         if ! apt-cache show libncurses5 > /dev/null 2>&1; then
@@ -194,7 +194,12 @@ jobs:
         echo "FileUsage = 1" | sudo tee -a /etc/odbcinst.ini
         
         # Verify registration
-        odbcinst -q -d
+        if command -v odbcinst &> /dev/null; then
+          odbcinst -q -d
+        else
+          echo "odbcinst not found, verifying via ini file:"
+          cat /etc/odbcinst.ini
+        fi
         
     - name: Run Tests
       working-directory: ${{github.workspace}}/build
