fix: direct-DLL test loading, GTEST_SKIP for connection tests, remove odbc32 from driver
- Fix NullHandleTests to load driver DLL directly via exe-relative paths
  instead of going through ODBC Driver Manager (which was picking up
  system-installed C:\Windows\SYSTEM32\FirebirdODBC.dll instead of built DLL)
- Add post-build step to copy driver DLL next to test executable
- Set CTest PATH environment for GTest/driver DLL discovery
- Change connection integration tests to GTEST_SKIP when
  FIREBIRD_ODBC_CONNECTION env var is not set (100% CTest pass rate)
- Remove odbc32.dll from driver link libraries (driver provides its own
  ODBC entry points via .def file, should not import from Driver Manager)
- Restore Utf16Convert.cpp/h files (were missing from repo)
- Update FIREBIRD_ODBC_MASTER_PLAN.md with T-13, T-14 fixes

Issues: T-13 (system DLL loading), T-14 (connection test failures)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -136,11 +136,13 @@ target_link_libraries(OdbcFb PRIVATE IscDbc)
 # Platform-specific linking
 if(WIN32)
     target_link_libraries(OdbcFb PRIVATE 
-        odbc32 
         odbccp32 
         legacy_stdio_definitions
         Version
     )
+    
+    # Don't link against odbc32.dll - the driver provides its own
+    # ODBC entry points and should not import them from the Driver Manager
     
     # Set the .def file for exports
     if(CMAKE_SIZEOF_VOID_P EQUAL 8)
