fix: SQLColAttribute signature on Linux, DllMainSetup linker error with ATL
- Fix SQLColAttribute to use SQLLEN* for numericAttribute on UNIX platforms
  (matching unixODBC header declaration). Previously only used SQLLEN* on
  _WIN64, causing symbol mismatch on Linux (T-13 related).
- Fix DllMainSetup linker error when ATL is available: always compile
  AtlStubs.cpp but guard ATL-specific stubs with HAVE_ATL preprocessor
  define. DllMainSetup is now unconditionally available.
- Skip dlclose in Linux test teardown to prevent 'double free' crash
  during process exit when driver global destructors conflict with test
  process cleanup.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,7 @@ if(WIN32 AND MSVC)
     
     if(HAVE_ATL)
         list(APPEND ODBCJDBC_SOURCES
+            AtlStubs.cpp
             ResourceManagerSink.cpp
             SafeEnvThread.cpp
             TransactionResourceAsync.cpp
@@ -122,6 +123,11 @@ set(ODBCJDBC_HEADERS
 
 # Create the main ODBC driver library
 add_library(OdbcFb ${ODBCJDBC_SOURCES} ${ODBCJDBC_HEADERS})
+
+# Add HAVE_ATL definition if ATL was found (must come after add_library)
+if(HAVE_ATL)
+    target_compile_definitions(OdbcFb PRIVATE HAVE_ATL)
+endif()
 
 # Set library output name
 if(WIN32)
