feat: implement savepoint isolation, add comprehensive test suite, add README
Phase 2 completion:
- 2.3: Statement-level savepoint isolation (M-1 resolved)
  - Added setSavepoint/releaseSavepoint/rollbackSavepoint to Connection interface
  - Implemented in IscConnection using Firebird IAttachment::execute()
  - Wrapped IscStatement::execute() and executeProcedure() with savepoint
    isolation when autoCommit=OFF — failed statements no longer corrupt
    the transaction

Phase 3 completion (131 tests total, 129 pass, 2 skip):
- test_helpers.h: Shared OdbcConnectedTest fixture with RAII TempTable
- test_cursor.cpp: Cursor names, block fetch, close/re-exec, describe col
- test_descriptor.cpp: IRD/ARD/APD/IPD, SQLGetDescField, SQLCopyDesc
- test_multi_statement.cpp: Interleaved statements, 20 simultaneous handles
- test_data_types.cpp: 18 tests covering all SQL types, conversions, params
- test_blob.cpp: Small/large (64KB) text BLOBs, NULL BLOBs
- test_bind_cycle.cpp: Rebind, unbind, reset params, prepare/execute cycling
- test_savepoint.cpp: PK violation isolation, multiple failures, rollback
- test_catalog.cpp: SQLTables, SQLColumns, SQLPrimaryKeys, SQLGetTypeInfo,
  SQLStatistics, SQLSpecialColumns
- test_escape_sequences.cpp: {d}, {ts}, {fn}, {oj} escapes, SQLNativeSql

Documentation:
- README.md: Full project documentation (connection params, build, test, install)
- AGENTS.md: Moved database connection info to RULE #0.1 for visibility
- Master plan updated to v1.6

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -19,9 +19,18 @@ include(GoogleTest)
 
 # Test executable
 add_executable(firebird_odbc_tests
-    test_connection.cpp
     test_main.cpp
     test_null_handles.cpp
+    test_connection.cpp
+    test_cursor.cpp
+    test_descriptor.cpp
+    test_multi_statement.cpp
+    test_data_types.cpp
+    test_blob.cpp
+    test_bind_cycle.cpp
+    test_savepoint.cpp
+    test_catalog.cpp
+    test_escape_sequences.cpp
 )
 
 # Link with Google Test and the ODBC library
