feat: complete Phase 4 — feature completeness
Implement all Phase 4 tasks for ODBC driver feature parity:

4.2 Server version feature-flagging:
- Add getServerMajorVersion()/getServerMinorVersion() to Connection interface
- Implement in IscConnection via Attachment version parsing
- Add getMajorVersion()/getMinorVersion()/isVersionAtLeast() to Attachment

4.3 Batch parameter execution (M-7):
- Validate executeStatementParamArray() with row-wise binding
- Document PARAMSET_SIZE must be set before SQLPrepare
- 4 tests: InsertWithRowWiseBinding, RowWiseVerifyValues, ParamsetSizeThree, ParamsetSizeOne

4.4 SQLGetTypeInfo for FB4+ types (M-8):
- Add INT128, DECFLOAT, TIME WITH TIME ZONE, TIMESTAMP WITH TIME ZONE to TypesResultSet
- Version-gated: types only shown when server >= Firebird 4.0
- Add BLR handler safety net in IscSqlType::buildType for blr_sql_time_tz,
  blr_timestamp_tz, blr_int128, blr_dec64, blr_dec128

4.5 Declare/fetch mode (M-9):
- Confirmed Firebird OO API already implements streaming fetch natively
  via openCursor()+fetchNext() for forward-only cursors

4.6 ConnSettings support (M-5):
- Parse ConnSettings from connection string (SETUP_CONNSETTINGS/KEY_DSN_CONNSETTINGS)
- Execute SQL statements via PreparedStatement after connection open
- Semicolons split multiple statements; invalid SQL fails the connection
- 3 tests: ConnSettingsExecutesSQL, EmptyConnSettingsIsIgnored, InvalidConnSettingsFailsConnection

4.7 Scrollable cursor support (M-2):
- Verified static scrollable cursors work with all fetch orientations
- 9 tests: FetchFirstAndLast, FetchPrior, FetchAbsolute, FetchRelative,
  FetchNextInScrollable, ForwardOnlyRejectsPrior, FetchBeyondEndReturnsNoData,
  FetchBeforeStartReturnsNoData, RewindAfterEnd

Test results: 153 tests, 151 pass, 2 skip (pre-existing escape sequence skips)
Master plan updated to v1.7 with all Phase 4 tasks marked complete.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -31,6 +31,10 @@ add_executable(firebird_odbc_tests
     test_savepoint.cpp
     test_catalog.cpp
     test_escape_sequences.cpp
+    test_server_version.cpp
+    test_batch_params.cpp
+    test_conn_settings.cpp
+    test_scrollable_cursor.cpp
 )
 
 # Link with Google Test and the ODBC library
