feat: add full ODBC Array of Parameter Values support
- Fix column-wise binding: compute sizeColumnExtendedFetch for fixed-size
  types (INTEGER, DOUBLE, etc.) in bindInputOutputParam when bufferLength=0
  was passed to SQLBindParameter, preventing all array rows from reading
  the same first element
- Fix indicator stride: use sizeof(SQLLEN) instead of sizeof(SQLINTEGER)
  for column-wise indicator offsets
- Move PARAMSET_SIZE > 1 check from prepare-time to execute-time, allowing
  SQL_ATTR_PARAMSET_SIZE to be set after SQLPrepare (per ODBC spec)
- Add SQL_ATTR_PARAM_OPERATION_PTR support to skip rows marked
  SQL_PARAM_IGNORE during array execution
- Initialize status array to SQL_PARAM_UNUSED before execution
- Improve error handling: continue processing remaining rows after failures
  instead of aborting the entire batch
- Add 17 comprehensive tests ported from psqlodbc arraybinding-test.c and
  params-batch-exec-test.c covering column-wise INSERT/UPDATE/DELETE,
  row-wise INSERT, NULL values, operation ptr, 1000-row stress test,
  re-execute with different data, handle lifecycle, multiple data types,
  integer-only arrays, without status pointers, and SQLGetInfo validation
- Update master plan to v2.0 with M-7 and T-12 fully resolved

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -42,6 +42,7 @@ add_executable(firebird_odbc_tests
     test_prepare.cpp
     test_cursor_commit.cpp
     test_data_at_execution.cpp
+    test_array_binding.cpp
 )
 
 # Link with Google Test and the ODBC library
