--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -4,9 +4,6 @@ on:
   push:
   pull_request:
 
-env:
-  BUILD_TYPE: Release
-
 jobs:
   build-and-test-windows:
     runs-on: windows-latest
@@ -25,6 +22,7 @@ jobs:
           Write-Host "NuGet provider install failed, continuing: $($_.Exception.Message)"
         }
         Install-Module -Name PSFirebird -Force -AllowClobber -Scope CurrentUser -Repository PSGallery
+        Install-Module -Name InvokeBuild -Force -Scope CurrentUser
         
     - name: Create Firebird Test Database
       shell: pwsh
@@ -41,12 +39,10 @@ jobs:
         
         Write-Host "Firebird environment created at: $envPath"
         Write-Host "Test database created at: $dbPath"
-        
-    - name: Configure CMake
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DBUILD_TESTING=ON -DFORCE_NO_ATL=ON
-      
+
     - name: Build
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+      shell: pwsh
+      run: Invoke-Build build -Configuration Release
       
     - name: Setup Test Environment
       shell: pwsh
@@ -59,48 +55,14 @@ jobs:
         
     - name: Install ODBC Driver
       shell: pwsh
-      run: |
-        # Copy built driver to system directory for registration
-        $driverPath = "${{github.workspace}}\build\${{env.BUILD_TYPE}}\FirebirdODBC.dll"
-        
-        if (Test-Path $driverPath) {
-          Write-Host "Driver built at: $driverPath"
-          
-          # Register the driver (for testing purposes)
-          # Note: In a real scenario, you'd use a proper installer
-          $regPath = "HKLM:\SOFTWARE\ODBC\ODBCINST.INI\Firebird ODBC Driver"
-          if (!(Test-Path $regPath)) {
-            New-Item -Path "HKLM:\SOFTWARE\ODBC\ODBCINST.INI" -Name "Firebird ODBC Driver" -Force
-          }
-          
-          Set-ItemProperty -Path $regPath -Name "Driver" -Value $driverPath -Type String -Force
-          Set-ItemProperty -Path $regPath -Name "Setup" -Value $driverPath -Type String -Force
-          Set-ItemProperty -Path $regPath -Name "APILevel" -Value "1" -Type String -Force
-          Set-ItemProperty -Path $regPath -Name "ConnectFunctions" -Value "YYY" -Type String -Force
-          Set-ItemProperty -Path $regPath -Name "DriverODBCVer" -Value "03.51" -Type String -Force
-          Set-ItemProperty -Path $regPath -Name "FileUsage" -Value "0" -Type String -Force
-          Set-ItemProperty -Path $regPath -Name "SQLLevel" -Value "1" -Type String -Force
-          
-          # Add to drivers list
-          $driversPath = "HKLM:\SOFTWARE\ODBC\ODBCINST.INI\ODBC Drivers"
-          if (!(Test-Path $driversPath)) {
-            New-Item -Path "HKLM:\SOFTWARE\ODBC\ODBCINST.INI" -Name "ODBC Drivers" -Force
-          }
-          Set-ItemProperty -Path $driversPath -Name "Firebird ODBC Driver" -Value "Installed" -Type String -Force
-          
-          Write-Host "ODBC Driver registered successfully"
-        } else {
-          Write-Host "Driver not found at: $driverPath"
-          Get-ChildItem -Path "${{github.workspace}}\build" -Recurse -Filter "*.dll" | ForEach-Object { Write-Host $_.FullName }
-        }
+      run: Invoke-Build install -Configuration Release
         
     - name: Run Tests
-      working-directory: ${{github.workspace}}/build
       shell: pwsh
       run: |
         # Add DLL directories to PATH so test can find them
         $env:PATH = "${{github.workspace}}/build/Release;${{github.workspace}}/build/bin/Release;$env:PATH"
-        ctest -C ${{env.BUILD_TYPE}} --output-on-failure --verbose
+        Invoke-Build test -Configuration Release
         
     - name: Upload Build Artifacts
       uses: actions/upload-artifact@v4
@@ -108,9 +70,9 @@ jobs:
       with:
         name: windows-x64-binaries
         path: |
-          ${{github.workspace}}/build/${{env.BUILD_TYPE}}/*.dll
-          ${{github.workspace}}/build/${{env.BUILD_TYPE}}/*.lib
-          ${{github.workspace}}/build/${{env.BUILD_TYPE}}/*.pdb
+          ${{github.workspace}}/build/Release/*.dll
+          ${{github.workspace}}/build/Release/*.lib
+          ${{github.workspace}}/build/Release/*.pdb
 
   build-and-test-linux:
     runs-on: ubuntu-latest
@@ -146,6 +108,7 @@ jobs:
         }
         Register-PackageSource -Name 'NuGet' -Location 'https://api.nuget.org/v3/index.json' -ProviderName NuGet -Force
         Install-Module -Name PSFirebird -Force -AllowClobber -Scope CurrentUser -Repository PSGallery
+        Install-Module -Name InvokeBuild -Force -Scope CurrentUser
 
     - name: Create Firebird Test Database
       shell: pwsh
@@ -174,36 +137,17 @@ jobs:
         $connStr = "Driver={Firebird ODBC Driver};Database=$dbPath;UID=SYSDBA;PWD=masterkey;CHARSET=UTF8;CLIENT=$clientLib"
         echo "FIREBIRD_ODBC_CONNECTION=$connStr" >> $env:GITHUB_ENV
 
-    - name: Configure CMake
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DBUILD_TESTING=ON
-      
     - name: Build
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} -- -j$(nproc)
+      shell: pwsh
+      run: Invoke-Build build -Configuration Release
       
     - name: Install ODBC Driver
-      run: |
-        # Copy driver to a known location
-        sudo mkdir -p /usr/local/lib/odbc
-        sudo cp ${{github.workspace}}/build/libOdbcFb.so /usr/local/lib/odbc/
-        
-        # Register the driver in odbcinst.ini
-        echo "[Firebird ODBC Driver]" | sudo tee /etc/odbcinst.ini
-        echo "Description = Firebird ODBC Driver" | sudo tee -a /etc/odbcinst.ini
-        echo "Driver = /usr/local/lib/odbc/libOdbcFb.so" | sudo tee -a /etc/odbcinst.ini
-        echo "Setup = /usr/local/lib/odbc/libOdbcFb.so" | sudo tee -a /etc/odbcinst.ini
-        echo "FileUsage = 1" | sudo tee -a /etc/odbcinst.ini
-        
-        # Verify registration
-        if command -v odbcinst &> /dev/null; then
-          odbcinst -q -d
-        else
-          echo "odbcinst not found, verifying via ini file:"
-          cat /etc/odbcinst.ini
-        fi
-        
+      shell: pwsh
+      run: Invoke-Build install -Configuration Release
+      
     - name: Run Tests
-      working-directory: ${{github.workspace}}/build
-      run: ctest -C ${{env.BUILD_TYPE}} --output-on-failure --verbose
+      shell: pwsh
+      run: Invoke-Build test -Configuration Release
         
     - name: Upload Build Artifacts
       uses: actions/upload-artifact@v4
