fix: resolve all 5 ODBC Crusher-identified bugs (Phase 7)
OC-1: SQLCopyDesc crash on empty descriptor
  - OdbcDesc::operator= now guards against NULL records pointer
    and returns early when source headCount == 0
  - 3 new tests (CopyDescCrashTest)

OC-2: SQL_DIAG_ROW_COUNT always returns 0
  - Added setDiagRowCount() protected setter in OdbcObject
  - executeStatement(), executeStatementParamArray(), executeProcedure()
    now populate sqlDiagRowCount after execution
  - Fixed sqlGetDiagField to write SQL_DIAG_ROW_COUNT as SQLLEN*
    (was SQLINTEGER*, causing garbage in upper bytes on x64)
  - 4 new tests (DiagRowCountTest)

OC-3: SQL_ATTR_CONNECTION_TIMEOUT not supported
  - Added SQL_ATTR_CONNECTION_TIMEOUT to both sqlSetConnectAttr
    and sqlGetConnectAttr (shares connectionTimeout with LOGIN_TIMEOUT)
  - Fixed SQL_LOGIN_TIMEOUT getter which fell through to HYC00 error
  - 3 new tests (ConnectionTimeoutTest)

OC-4: SQL_ATTR_ASYNC_ENABLE silently accepted but non-functional
  - Connection-level setter now rejects SQL_ASYNC_ENABLE_ON with HYC00
  - Statement-level setter now rejects SQL_ASYNC_ENABLE_ON with HYC00
  - Both getters always return SQL_ASYNC_ENABLE_OFF
  - 5 new tests (AsyncEnableTest)

OC-5: returnStringInfo truncation reports wrong length
  - Removed *returnLength = maxLength overwrite on truncation;
    now preserves the full string length as set earlier (per ODBC spec)
  - Added NULL guard to SQLINTEGER* overload of returnStringInfo
  - 3 new tests (TruncationIndicatorTest)

Total: 18 new tests, 288 tests pass (0 regressions).

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -43,6 +43,7 @@ add_executable(firebird_odbc_tests
     test_cursor_commit.cpp
     test_data_at_execution.cpp
     test_array_binding.cpp
+    test_phase7_crusher_fixes.cpp
 )
 
 # Link with Google Test and the ODBC library
