feat: ODBC 3.8 compliance, SQL_GUID support, and version-aware data types
ODBC 3.8 Compliance:
- Accept SQL_OV_ODBC3_80 (380) as valid SQL_ATTR_ODBC_VERSION value
- Update SQL_DRIVER_ODBC_VER from 03.51 to 03.80
- Add SQL_ATTR_RESET_CONNECTION for connection pool reset
- Add SQL_GD_OUTPUT_PARAMS to SQL_GETDATA_EXTENSIONS bitmask
- Add SQL_ASYNC_DBC_FUNCTIONS info type (reports NOT_CAPABLE)
- Fix TypesResultSet to treat appOdbcVersion==380 as ODBC 3.x

SQL_GUID Type Support:
- Map CHAR(16) CHARACTER SET OCTETS to SQL_GUID in both:
  - IscSqlType::buildType (catalog functions)
  - Sqlda::getSqlType/getSqlTypeName (result set metadata)
- Add JDBC_GUID constant to JavaType.h
- Report SQL_GUID in SQLGetTypeInfo
- Add conversion methods: GUID<->string, GUID<->binary, binary->GUID, string->GUID

Version-Aware Data Types:
- Add BINARY/VARBINARY to TypesResultSet (Firebird 4+ only)
- SQL_GUID mapped from CHAR(16) OCTETS (FB3) or BINARY(16) (FB4+)

Tests (26 new, 318 total):
- test_odbc38_compliance.cpp: 12 tests for ODBC 3.8 features
- test_guid_and_binary.cpp: 14 tests for GUID, UUID, and FB4+ types

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -44,6 +44,8 @@ add_executable(firebird_odbc_tests
     test_data_at_execution.cpp
     test_array_binding.cpp
     test_phase7_crusher_fixes.cpp
+    test_odbc38_compliance.cpp
+    test_guid_and_binary.cpp
 )
 
 # Link with Google Test and the ODBC library
