feat: Phase 9 — IBatch for array params, remove dead ISC code, mark classes final
Phase 9.1: Implement IBatch for array parameter execution (FB4+)
- Added isBatchSupported(), batchBegin(), batchAdd(), batchExecute(),
  batchCancel() to IscOdbcStatement via new Statement interface methods
- Batch lazily created on first batchAdd() after ODBC type overrides applied
- Buffer assembly handles SQL_TEXT->SQL_VARYING re-conversion and
  setSqlData() pointer redirection for zero-copy optimization compat
- Single server roundtrip for N parameter rows (vs N roundtrips before)
- Feature-gated on FB4+ with automatic fallback to row-by-row for FB3
- Maps IBatchCompletionState to ODBC SQL_PARAM_STATUS_PTR values
- All 17 array binding + 4 batch param tests pass

Phase 9.3: Remove ~35 dead ISC function pointers from CFbDll
- Eliminated all loaded-but-never-called ISC functions
- Kept only: _array_* (3), bridge handles (2), fb_get_master_interface

Phase 9.8: Optimize Sqlda data copy
- Skip rebuild/copy when metadata unchanged (common case)

Phase 9.9: Replace isc_vax_integer with inline helper
- 4-line portable C++ function replaces loaded function pointer

Phase 9.10: Mark IscDbc concrete classes as final
- Enables compiler devirtualization for all concrete classes

Phase 9.11: Remove commented-out legacy ISC code
- Cleaned up dead #if 0 blocks across IscDbc layer

All 318 tests pass.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -94,3 +94,20 @@ add_custom_command(TARGET firebird_odbc_tests POST_BUILD
         $<TARGET_FILE_DIR:firebird_odbc_tests>
     COMMENT "Copying driver DLL next to test executable"
 )
+
+# Copy gtest/gmock DLLs next to the test executable
+add_custom_command(TARGET firebird_odbc_tests POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different
+        $<TARGET_FILE:gtest>
+        $<TARGET_FILE_DIR:firebird_odbc_tests>
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different
+        $<TARGET_FILE:gtest_main>
+        $<TARGET_FILE_DIR:firebird_odbc_tests>
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different
+        $<TARGET_FILE:gmock>
+        $<TARGET_FILE_DIR:firebird_odbc_tests>
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different
+        $<TARGET_FILE:gmock_main>
+        $<TARGET_FILE_DIR:firebird_odbc_tests>
+    COMMENT "Copying gtest/gmock DLLs next to test executable"
+)
