test: port 7 psqlodbc tests to Phase 6 (67 new tests, 385 total)
Port the following psqlodbc test suites to Firebird ODBC driver:

- stmthandles-test: 4 tests — 100+ handle allocation, interleaved
  prepare/execute, alloc/free/realloc patterns, handle reuse
- catalogfunctions-test: 22 tests — SQLGetTypeInfo, SQLTables,
  SQLColumns, SQLPrimaryKeys, SQLForeignKeys, SQLSpecialColumns,
  SQLStatistics, SQLProcedures, SQLProcedureColumns,
  SQLTablePrivileges, SQLColumnPrivileges, SQLGetInfo
- cursors-test: 7 tests — commit/rollback behavior, multiple cursors,
  close/re-execute, SQL_NO_DATA handling
- descrec-test: 10 tests — SQLGetDescRec/SQLDescribeCol for INT,
  BIGINT, VARCHAR, CHAR, NUMERIC, FLOAT, DOUBLE, DATE, TIME, TIMESTAMP
- bindcol-test: 5 tests — unbind/rebind mid-fetch, SQL_UNBIND + GetData,
  rebind to different type, bind beyond result set width
- wchar-char-test: 8 tests — SQL_C_WCHAR bind/fetch, parameters,
  truncation indicator, empty string, NULL handling
- cursor-name-test: 9 tests — default name prefix (SQL_CUR), set/get,
  persistence after exec/close, buffer truncation, duplicate detection

All 385 tests pass on Windows.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -46,6 +46,13 @@ add_executable(firebird_odbc_tests
     test_phase7_crusher_fixes.cpp
     test_odbc38_compliance.cpp
     test_guid_and_binary.cpp
+    test_stmthandles.cpp
+    test_catalogfunctions.cpp
+    test_cursors.cpp
+    test_descrec.cpp
+    test_bindcol.cpp
+    test_wchar.cpp
+    test_cursor_name.cpp
 )
 
 # Link with Google Test and the ODBC library
